@@ -443,5 +443,8 @@ $rcmail_config['check_all_folders'] = FALSE;
 // If true, after message delete/move, the next message will be displayed
 $rcmail_config['display_next'] = FALSE;
 
+// If true, messages list will be sorted by message index instead of message date
+$rcmail_config['index_sort'] = TRUE;
+
 // end of config file
 ?>
