@@ -1,6 +1,8 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Fix Received header format
+- Implemented sorting by message index - added 'index_sort' option (#1485936)
 - Fix dl() use in installer (#1486150)
 - Added 'ldap_debug' option
 - Fix "Empty startup greeting" bug (#1486085)
